Isabelle NEWS -- history user-relevant changes
==============================================

New in this Isabelle version
----------------------------

*** Pure ***

* Code generator: details of internal data cache have no impact on
the user space functionality any longer.


*** HOL ***

* New set of rules "ac_simps" provides combined assoc / commute rewrites
for all interpretations of the appropriate generic locales.

* Renamed theory "OrderedGroup" to "Groups" and split theory "Ring_and_Field"
into theories "Rings" and "Fields";  for more appropriate and more
consistent names suitable for name prefixes within the HOL theories.
INCOMPATIBILITY.

* Some generic constants have been put to appropriate theories:

    less_eq, less: Orderings
    abs, sgn: Groups
    inverse, divide: Rings

INCOMPATIBILITY.

* Class division ring also requires proof of fact divide_inverse.  However instantiation
of parameter divide has also been required previously.  INCOMPATIBILITY.

* More consistent naming of type classes involving orderings (and lattices):

    lower_semilattice                   ~> semilattice_inf
    upper_semilattice                   ~> semilattice_sup

    dense_linear_order                  ~> dense_linorder

    pordered_ab_group_add               ~> ordered_ab_group_add
    pordered_ab_group_add_abs           ~> ordered_ab_group_add_abs
    pordered_ab_semigroup_add           ~> ordered_ab_semigroup_add
    pordered_ab_semigroup_add_imp_le    ~> ordered_ab_semigroup_add_imp_le
    pordered_cancel_ab_semigroup_add    ~> ordered_cancel_ab_semigroup_add
    pordered_cancel_comm_semiring       ~> ordered_cancel_comm_semiring
    pordered_cancel_semiring            ~> ordered_cancel_semiring
    pordered_comm_monoid_add            ~> ordered_comm_monoid_add
    pordered_comm_ring                  ~> ordered_comm_ring
    pordered_comm_semiring              ~> ordered_comm_semiring
    pordered_ring                       ~> ordered_ring